--- a/package.json
+++ b/package.json
@@ -19,25 +19,25 @@
   "author": "satrong",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.16.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^7.21.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-vue": "^7.7.0",
-    "rollup": "^2.40.0",
-    "rollup-plugin-typescript": "^1.0.1",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3",
-    "vue": "^3.0.7"
+    "eslint-plugin-vue": "^7.20.0",
+    "rollup": "^2.60.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.4",
+    "vue": "^3.2.22"
   },
   "repository": {
     "type": "git",
@@ -47,6 +47,5 @@
     "vue": "^3.0.7"
   },
   "sideEffects": false,
-  "types": "./dist/index.d.ts",
-  "dependencies": {}
+  "types": "./dist/index.d.ts"
 }
