--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "vue-insert-component",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "",
-  "main": "dist/vue-insert-component.es.js",
-  "unpkg": "dist/vue-insert-component.global.js",
-  "module": "dist/vue-insert-component.esm-bundler.js",
-  "browser": "dist/vue-insert-component.es.js",
+  "main": "dist/vue-insert-component.mjs",
+  "exports":{
+    ".": {
+      "import": "./dist/vue-insert-component.mjs",
+      "require": "./dist/vue-insert-component.cjs",
+      "type": "./dist/index.d.ts"
+    }
+  },
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rollup -c",
-    "release": "sh scripts/release.sh",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "release": "sh scripts/release.sh"
   },
   "files": [
     "dist/*.js",
@@ -46,6 +50,5 @@
   "peerDependencies": {
     "vue": "^3.0.7"
   },
-  "sideEffects": false,
-  "types": "./dist/index.d.ts"
+  "sideEffects": false
 }
