--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "2.1.0",
   "description": "",
   "main": "dist/vue-insert-component.mjs",
-  "exports":{
+  "exports": {
     ".": {
       "import": "./dist/vue-insert-component.mjs",
-      "require": "./dist/vue-insert-component.cjs",
-      "type": "./dist/index.d.ts"
-    }
+      "require": "./dist/vue-insert-component.cjs"
+    },
+    "./*": "./*"
   },
+  "module": "./dist/vue-insert-component.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
-    "release": "sh scripts/release.sh"
+    "release": "release-it"
   },
   "files": [
     "dist/*.js",
@@ -38,6 +39,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.20.0",
+    "release-it": "^14.11.7",
     "rollup": "^2.60.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4",
