fix: error ignore files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-insert-component",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "",
   "main": "dist/vue-insert-component.mjs",
   "exports":{
@@ -16,8 +16,7 @@
     "release": "sh scripts/release.sh"
   },
   "files": [
-    "dist/*.js",
-    "dist/*.ts",
+    "dist/",
     "README.md"
   ],
   "author": "satrong",
