--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-insert-component",
-  "version": "2.3.0-beta9",
+  "version": "2.3.0",
   "description": "Insert Vue component into root component for Vue 3.",
   "main": "dist/vue-insert-component.mjs",
   "exports": {
