--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
-    "release": "release-it"
+    "release": "npm run build && release-it"
   },
   "files": [
     "dist/",
